# oop-mai-lab3

./: README.md
lab3/: 1try.cpp  CMakeLists.txt  a.out
lab3/include/: array.hpp  figure.hpp  rectangle.hpp  square.hpp  triangle.hpp
lab3/src/: array.cpp  figure.cpp  main.cpp  rectangle.cpp  square.cpp  triangle.cpp
lab3/tests/: test_main.cpp
